vnpy/app/wh_strategy/wh_parser/whp/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NAMESTR

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> IDENTIFIER LBRACKET NUMBER COMMA NUMBER COMMA NUMBER RBRACKET
Rule 5     statement -> SHARP CALL LBRACKET IDENTIFIER COMMA IDENTIFIER RBRACKET AS IDENTIFIER
Rule 6     statement -> SHARP IMPORT LBRACKET IDENTIFIER COMMA NUMBER COMMA IDENTIFIER RBRACKET AS IDENTIFIER
Rule 7     statement -> SHARP WITH LBRACKET IDENTIFIER RBRACKET AS IDENTIFIER
Rule 8     statement -> IDENTIFIER COLON expression SEM
Rule 9     statement -> IDENTIFIER DEFINE_NO expression SEM
Rule 10    statement -> IDENTIFIER DEFINE_ADD expression SEM
Rule 11    statement -> IDENTIFIER DEFINE_IND expression SEM
Rule 12    statement -> expression COMMA tradecom SEM
Rule 13    statement -> CONFIG SEM
Rule 14    expression -> expression LT expression
Rule 15    expression -> expression GT expression
Rule 16    expression -> expression EQ expression
Rule 17    expression -> expression LTE expression
Rule 18    expression -> expression GTE expression
Rule 19    expression -> expression NEQ expression
Rule 20    expression -> expression ADD expression
Rule 21    expression -> expression SUB expression
Rule 22    expression -> expression MUL expression
Rule 23    expression -> expression DIV expression
Rule 24    expression -> expression MOD expression
Rule 25    expression -> expression AND expression
Rule 26    expression -> expression OR expression
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    expression -> NUMBER
Rule 29    expression -> IDENTIFIER
Rule 30    expression -> IDENTIFIER DOT IDENTIFIER
Rule 31    tradecom -> <empty>
Rule 32    tradecom -> TRADE
Rule 33    tradecom -> TRADE LPAREN argslist RPAREN
Rule 34    expression -> IDENTIFIER LPAREN argslist RPAREN
Rule 35    argslist -> <empty>
Rule 36    argslist -> expression
Rule 37    argslist -> argslist COMMA expression

Terminals, with rules where they appear

ADD                  : 20
AND                  : 25
AS                   : 5 6 7
CALL                 : 5
COLON                : 8
COMMA                : 4 4 5 6 6 12 37
CONFIG               : 13
DEFINE_ADD           : 10
DEFINE_IND           : 11
DEFINE_NO            : 9
DIV                  : 23
DOT                  : 30
EQ                   : 16
GT                   : 15
GTE                  : 18
IDENTIFIER           : 4 5 5 5 6 6 6 7 7 8 9 10 11 29 30 30 34
IMPORT               : 6
LBRACKET             : 4 5 6 7
LPAREN               : 27 33 34
LT                   : 14
LTE                  : 17
MOD                  : 24
MUL                  : 22
NAMESTR              : 
NEQ                  : 19
NUMBER               : 4 4 4 6 28
OR                   : 26
RBRACKET             : 4 5 6 7
RPAREN               : 27 33 34
SEM                  : 8 9 10 11 12 13
SHARP                : 5 6 7
SUB                  : 21
TRADE                : 32 33
WITH                 : 7
error                : 

Nonterminals, with rules where they appear

argslist             : 33 34 37
expression           : 8 9 10 11 12 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 36 37
program              : 0
statement            : 2 3
statements           : 1 3
tradecom             : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . IDENTIFIER LBRACKET NUMBER COMMA NUMBER COMMA NUMBER RBRACKET
    (5) statement -> . SHARP CALL LBRACKET IDENTIFIER COMMA IDENTIFIER RBRACKET AS IDENTIFIER
    (6) statement -> . SHARP IMPORT LBRACKET IDENTIFIER COMMA NUMBER COMMA IDENTIFIER RBRACKET AS IDENTIFIER
    (7) statement -> . SHARP WITH LBRACKET IDENTIFIER RBRACKET AS IDENTIFIER
    (8) statement -> . IDENTIFIER COLON expression SEM
    (9) statement -> . IDENTIFIER DEFINE_NO expression SEM
    (10) statement -> . IDENTIFIER DEFINE_ADD expression SEM
    (11) statement -> . IDENTIFIER DEFINE_IND expression SEM
    (12) statement -> . expression COMMA tradecom SEM
    (13) statement -> . CONFIG SEM
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    IDENTIFIER      shift and go to state 4
    SHARP           shift and go to state 6
    CONFIG          shift and go to state 8
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . IDENTIFIER LBRACKET NUMBER COMMA NUMBER COMMA NUMBER RBRACKET
    (5) statement -> . SHARP CALL LBRACKET IDENTIFIER COMMA IDENTIFIER RBRACKET AS IDENTIFIER
    (6) statement -> . SHARP IMPORT LBRACKET IDENTIFIER COMMA NUMBER COMMA IDENTIFIER RBRACKET AS IDENTIFIER
    (7) statement -> . SHARP WITH LBRACKET IDENTIFIER RBRACKET AS IDENTIFIER
    (8) statement -> . IDENTIFIER COLON expression SEM
    (9) statement -> . IDENTIFIER DEFINE_NO expression SEM
    (10) statement -> . IDENTIFIER DEFINE_ADD expression SEM
    (11) statement -> . IDENTIFIER DEFINE_IND expression SEM
    (12) statement -> . expression COMMA tradecom SEM
    (13) statement -> . CONFIG SEM
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    $end            reduce using rule 1 (program -> statements .)
    IDENTIFIER      shift and go to state 4
    SHARP           shift and go to state 6
    CONFIG          shift and go to state 8
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5

    statement                      shift and go to state 10
    expression                     shift and go to state 7

state 3

    (2) statements -> statement .

    IDENTIFIER      reduce using rule 2 (statements -> statement .)
    SHARP           reduce using rule 2 (statements -> statement .)
    CONFIG          reduce using rule 2 (statements -> statement .)
    LPAREN          reduce using rule 2 (statements -> statement .)
    NUMBER          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> IDENTIFIER . LBRACKET NUMBER COMMA NUMBER COMMA NUMBER RBRACKET
    (8) statement -> IDENTIFIER . COLON expression SEM
    (9) statement -> IDENTIFIER . DEFINE_NO expression SEM
    (10) statement -> IDENTIFIER . DEFINE_ADD expression SEM
    (11) statement -> IDENTIFIER . DEFINE_IND expression SEM
    (29) expression -> IDENTIFIER .
    (30) expression -> IDENTIFIER . DOT IDENTIFIER
    (34) expression -> IDENTIFIER . LPAREN argslist RPAREN

    LBRACKET        shift and go to state 11
    COLON           shift and go to state 12
    DEFINE_NO       shift and go to state 13
    DEFINE_ADD      shift and go to state 14
    DEFINE_IND      shift and go to state 15
    COMMA           reduce using rule 29 (expression -> IDENTIFIER .)
    LT              reduce using rule 29 (expression -> IDENTIFIER .)
    GT              reduce using rule 29 (expression -> IDENTIFIER .)
    EQ              reduce using rule 29 (expression -> IDENTIFIER .)
    LTE             reduce using rule 29 (expression -> IDENTIFIER .)
    GTE             reduce using rule 29 (expression -> IDENTIFIER .)
    NEQ             reduce using rule 29 (expression -> IDENTIFIER .)
    ADD             reduce using rule 29 (expression -> IDENTIFIER .)
    SUB             reduce using rule 29 (expression -> IDENTIFIER .)
    MUL             reduce using rule 29 (expression -> IDENTIFIER .)
    DIV             reduce using rule 29 (expression -> IDENTIFIER .)
    MOD             reduce using rule 29 (expression -> IDENTIFIER .)
    AND             reduce using rule 29 (expression -> IDENTIFIER .)
    OR              reduce using rule 29 (expression -> IDENTIFIER .)
    DOT             shift and go to state 16
    LPAREN          shift and go to state 17


state 5

    (28) expression -> NUMBER .

    COMMA           reduce using rule 28 (expression -> NUMBER .)
    LT              reduce using rule 28 (expression -> NUMBER .)
    GT              reduce using rule 28 (expression -> NUMBER .)
    EQ              reduce using rule 28 (expression -> NUMBER .)
    LTE             reduce using rule 28 (expression -> NUMBER .)
    GTE             reduce using rule 28 (expression -> NUMBER .)
    NEQ             reduce using rule 28 (expression -> NUMBER .)
    ADD             reduce using rule 28 (expression -> NUMBER .)
    SUB             reduce using rule 28 (expression -> NUMBER .)
    MUL             reduce using rule 28 (expression -> NUMBER .)
    DIV             reduce using rule 28 (expression -> NUMBER .)
    MOD             reduce using rule 28 (expression -> NUMBER .)
    AND             reduce using rule 28 (expression -> NUMBER .)
    OR              reduce using rule 28 (expression -> NUMBER .)
    RPAREN          reduce using rule 28 (expression -> NUMBER .)
    SEM             reduce using rule 28 (expression -> NUMBER .)


state 6

    (5) statement -> SHARP . CALL LBRACKET IDENTIFIER COMMA IDENTIFIER RBRACKET AS IDENTIFIER
    (6) statement -> SHARP . IMPORT LBRACKET IDENTIFIER COMMA NUMBER COMMA IDENTIFIER RBRACKET AS IDENTIFIER
    (7) statement -> SHARP . WITH LBRACKET IDENTIFIER RBRACKET AS IDENTIFIER

    CALL            shift and go to state 18
    IMPORT          shift and go to state 19
    WITH            shift and go to state 20


state 7

    (12) statement -> expression . COMMA tradecom SEM
    (14) expression -> expression . LT expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . EQ expression
    (17) expression -> expression . LTE expression
    (18) expression -> expression . GTE expression
    (19) expression -> expression . NEQ expression
    (20) expression -> expression . ADD expression
    (21) expression -> expression . SUB expression
    (22) expression -> expression . MUL expression
    (23) expression -> expression . DIV expression
    (24) expression -> expression . MOD expression
    (25) expression -> expression . AND expression
    (26) expression -> expression . OR expression

    COMMA           shift and go to state 21
    LT              shift and go to state 22
    GT              shift and go to state 23
    EQ              shift and go to state 24
    LTE             shift and go to state 25
    GTE             shift and go to state 26
    NEQ             shift and go to state 27
    ADD             shift and go to state 28
    SUB             shift and go to state 29
    MUL             shift and go to state 30
    DIV             shift and go to state 31
    MOD             shift and go to state 32
    AND             shift and go to state 33
    OR              shift and go to state 34


state 8

    (13) statement -> CONFIG . SEM

    SEM             shift and go to state 35


state 9

    (27) expression -> LPAREN . expression RPAREN
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 36

state 10

    (3) statements -> statements statement .

    IDENTIFIER      reduce using rule 3 (statements -> statements statement .)
    SHARP           reduce using rule 3 (statements -> statements statement .)
    CONFIG          reduce using rule 3 (statements -> statements statement .)
    LPAREN          reduce using rule 3 (statements -> statements statement .)
    NUMBER          reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)


state 11

    (4) statement -> IDENTIFIER LBRACKET . NUMBER COMMA NUMBER COMMA NUMBER RBRACKET

    NUMBER          shift and go to state 38


state 12

    (8) statement -> IDENTIFIER COLON . expression SEM
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 39

state 13

    (9) statement -> IDENTIFIER DEFINE_NO . expression SEM
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 40

state 14

    (10) statement -> IDENTIFIER DEFINE_ADD . expression SEM
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 41

state 15

    (11) statement -> IDENTIFIER DEFINE_IND . expression SEM
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 42

state 16

    (30) expression -> IDENTIFIER DOT . IDENTIFIER

    IDENTIFIER      shift and go to state 43


state 17

    (34) expression -> IDENTIFIER LPAREN . argslist RPAREN
    (35) argslist -> .
    (36) argslist -> . expression
    (37) argslist -> . argslist COMMA expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    RPAREN          reduce using rule 35 (argslist -> .)
    COMMA           reduce using rule 35 (argslist -> .)
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    argslist                       shift and go to state 44
    expression                     shift and go to state 45

state 18

    (5) statement -> SHARP CALL . LBRACKET IDENTIFIER COMMA IDENTIFIER RBRACKET AS IDENTIFIER

    LBRACKET        shift and go to state 46


state 19

    (6) statement -> SHARP IMPORT . LBRACKET IDENTIFIER COMMA NUMBER COMMA IDENTIFIER RBRACKET AS IDENTIFIER

    LBRACKET        shift and go to state 47


state 20

    (7) statement -> SHARP WITH . LBRACKET IDENTIFIER RBRACKET AS IDENTIFIER

    LBRACKET        shift and go to state 48


state 21

    (12) statement -> expression COMMA . tradecom SEM
    (31) tradecom -> .
    (32) tradecom -> . TRADE
    (33) tradecom -> . TRADE LPAREN argslist RPAREN

    SEM             reduce using rule 31 (tradecom -> .)
    TRADE           shift and go to state 50

    tradecom                       shift and go to state 49

state 22

    (14) expression -> expression LT . expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 51

state 23

    (15) expression -> expression GT . expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 52

state 24

    (16) expression -> expression EQ . expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 53

state 25

    (17) expression -> expression LTE . expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 54

state 26

    (18) expression -> expression GTE . expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 55

state 27

    (19) expression -> expression NEQ . expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression LTE expression
    (18) expression -> . expression GTE expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression ADD expression
    (21) expression -> . expression SUB expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . IDENTIFIER
    (30) expression -> . IDENTIFIER DOT IDENTIFIER
    (34) expression -> . IDENTIFIER LPAREN argslist RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 5
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 56

state 28
